simple-ingress-https-vault-sso/pod-simple-ingress-https-vault-sso.yaml
# kubectl -n test-ingress-https-vault-sso exec -it pod-test-ingress-https-5c485b6c-qn5p6 -- /bin/sh
# kubectl --namespace test-ingress-https-vault-sso logs pod-test-ingress-https-vault-sso-6444989767-jtzrl
# openssl verify -CApath /ca cert.pem
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-test-ingress-https-vault-sso
  namespace: test-ingress-https-vault-sso
  labels:
    app: pod-test-ingress-https-vault-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-test-ingress-https-vault-sso
  template:
    metadata:
      labels:
        app: pod-test-ingress-https-vault-sso
    spec:
      containers:

      - name: pod-test-ingress-https-vault-sso
        #image: l_nginx:latest
        image: l_openresty:latest
        imagePullPolicy: Never

        ports:

          - containerPort: 80
            protocol: TCP

        resources:

          limits:
            cpu: 100m
            memory: 512Mi

          requests:
            cpu: 10m
            memory: 128Mi

#        readinessProbe:
#
#          tcpSocket:
#            port: 8765
#          failureThreshold: 2
#          initialDelaySeconds: 4
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 5
#
#        livenessProbe:
#
#          tcpSocket:
#            port: 8765
#          failureThreshold: 6
#          initialDelaySeconds: 8
#          periodSeconds: 30
#          successThreshold: 1
#          timeoutSeconds: 5

        volumeMounts:

          - name: nginx-configuration
            mountPath: /etc/nginx/nginx.conf
            subPath: NGINX_CONF_KEY

          - name: application-configuration
            mountPath: /etc/nginx/nginx.d/app.conf
            subPath: APP_CONF_KEY

          - name: application-html
            mountPath: /usr/share/nginx/html/index.html
            subPath: APP_HTML_KEY


          - name: simple-pem
            mountPath: /etc/nginx/ssl/ext/cert-ext.pem
            subPath: tls.crt

          - name: simple-privkey
            mountPath: /etc/nginx/ssl/ext/cert-ext.key
            subPath: tls.key


          - name: pod-cert
            mountPath: "/etc/nginx/ssl/int/"

      volumes:

        - name: nginx-configuration
          secret:
            secretName: pod-test-ingress-vault-sso-secret

        - name: application-configuration
          secret:
            secretName: pod-test-ingress-vault-sso-secret

        - name: application-html
          secret:
            secretName: pod-test-ingress-vault-sso-secret


        - name: simple-pem
          secret:
            secretName: simple-nginx-sso-certificate

        - name: simple-privkey
          secret:
            secretName: simple-nginx-sso-certificate


        - name: pod-cert
          csi:
            driver: csi.cert-manager.io
            readOnly: true
            volumeAttributes:
              csi.cert-manager.io/issuer-kind: ClusterIssuer
              csi.cert-manager.io/issuer-name: vault-pki-cluster-clusterissuer
              csi.cert-manager.io/issuer-group: cert-manager.io
              csi.cert-manager.io/common-name: simple.cluster.local
              csi.cert-manager.io/dns-names: ${POD_NAME}.${POD_NAMESPACE}.pod.cluster.local
              csi.cert-manager.io/duration: 720h
              csi.cert-manager.io/renew-before: 4h
              csi.cert-manager.io/is-ca: "false"
              csi.cert-manager.io/key-usages: digital signature,key encipherment,server auth,client auth
              csi.cert-manager.io/certificate-file: cert-int.pem
              csi.cert-manager.io/privatekey-file: cert-int.key
              csi.cert-manager.io/ca-file: ca-int.pem
