simple-ingress-https-vault-sso/pod-sso-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-sso-nginx-service
  namespace: pod-sso
  labels:
    app: pod-sso-nginx
spec:
  selector:
    app: pod-sso-nginx
  ports:
    - name: https
      protocol: TCP
      port: 8765
      targetPort: 8765
