simple-ingress-https-vault-sso/pod-ingress-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: simple-ingress-https-vault-sso
  namespace: test-ingress-https-vault-sso
  labels:
    app: simple-ingress-https-vault-sso
    layer: edge
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`simple.kube.local`)
      services:
        - name: pod-test-sso-service
          port: 8765
  tls:
    passthrough: true
